lab1/Test/L1-A-3-54.cmm
float ;
struct {
  int mdUFIo = K1JZ , m int ;
}z_lBu , Oy7VozG5ZR_FF5V :, L4SZiqjclopHErQ0opLY 


;
- $float 